infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paynpik
  labels:
    app: paynpik
